crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__application_nested.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\nf (g x)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var {
                kind: LowVar,
                name: "f",
            },
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 7,
                    },
                },
                value: Call {
                    function: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 4,
                            },
                            end: Position {
                                line: 1,
                                column: 5,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "g",
                        },
                    },
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 6,
                                },
                                end: Position {
                                    line: 1,
                                    column: 7,
                                },
                            },
                            value: Var {
                                kind: LowVar,
                                name: "x",
                            },
                        },
                    ],
                },
            },
        ],
    },
}
