crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__call_grouping_2.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: outer (((value)))
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 18,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 6,
                },
            },
            value: Var {
                kind: LowVar,
                name: "outer",
            },
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 10,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "value",
                },
            },
        ],
    },
}
