crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__call_grouping_3.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "(\\x -> x) False"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 2,
                },
                end: Position {
                    line: 1,
                    column: 9,
                },
            },
            value: Lambda {
                parameters: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 3,
                            },
                            end: Position {
                                line: 1,
                                column: 4,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                ],
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "x",
                    },
                },
            },
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 11,
                    },
                    end: Position {
                        line: 1,
                        column: 16,
                    },
                },
                value: Var {
                    kind: CapVar,
                    name: "False",
                },
            },
        ],
    },
}
