crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__call_with_bytes_argument.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\nf #\"01\" x"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Call {
        function: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var {
                kind: LowVar,
                name: "f",
            },
        },
        arguments: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 3,
                    },
                    end: Position {
                        line: 1,
                        column: 8,
                    },
                },
                value: Bytes(
                    [
                        1,
                    ],
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 9,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "x",
                },
            },
        ],
    },
}
