crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__error_fat_arrow.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\na => b"
info: diagnostic
---
nash::syntax

  × Unexpected `=>` in expression.
   ╭─[src/Main.nash:1:3]
 1 │ a => b
   ·   ──
   ╰────
  help: Use `=>` after type constraints; use `->` for function and case bodies.
