crates/nash-parse/src/expression/snapshots/nash_parse__expression__tests__error_left_arrow.snap
---
source: crates/nash-parse/src/expression/mod.rs
description: "Code:\n\na <- b"
---
OperatorReserved(
    LeftArrow,
    1,
    3,
)
